[package]
name = "tinypng-lib"
version = "1.0.43"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
imagequant = { version = "4.2.0", default-features = false }
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
lodepng = "3.7.2"
